# CareerPilot

./: .env.example  .gitignore  About-The-Project.md  BRANCHING_STRATEGY.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile.agent  Dockerfile.api  Dockerfile.api.cpu  Dockerfile.api.gpu  Dockerfile.ui  README.md  deployment-architecture.mmd  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
MockTest/: Candidate1(AditiSharma).txt  Candidate2(ArjunPatel).txt  Candidate3(KaranMehta).txt  Candidate4(NehaGupta).txt  Candidate5(PriyaNair).txt  Candidate6(RahulVerma).txt  Candidate7(SanaKhan).txt  CareerPilot Evaluation - Process.md  CareerPilot-AI-Studo-Prompt(System+User).md  JD1-Python Developer.txt  JD2-Data Analyst.txt  JD3-Backend Engineer.txt  JD4-ML Engineer.txt
app/agent/: prompts.py  workflow.py
app/api/: analysis_history.py  auth.py  config.py  mock_interview.py  schemas.py  server.py
app/db/: mongo.py
app/gemini/: __init__.py  client.py  embeddings.py  exceptions.py  json_utils.py  logger.py  prompt_loader.py  retry.py  service.py  text_analysis.py  video_analysis.py  video_extraction.py
app/rag/: __init__.py  agent.py  agent_worker.py  cli_ingest.py  ingest.py  mongo_vector.py
app/resources/: learning_links.json
app/ui/: main.py
docs/: Case Study.docx  Deployment-Architecture.md  GPU Integration & Troubleshooting Guide.md  GPU_SETUP_WINDOWS.md  GPU‑Accelerated Architecture Overview.md  MongoDB Atlas Setup & Security Hardening Guide.md  Performance-Analysis.md  SECURITY_UPGRADE_SUMMARY.md  end-to-end-flow.mmd
tests/: conftest.py
(+60 files in other folders)
